--- a/src/pages/single/single.css
+++ b/src/pages/single/single.css
@@ -1,3 +1,11 @@
-.single{
+.single {
     display: flex;
-}
+  }
+  
+  /* Responsive CSS for mobile */
+  @media (max-width: 767px) {
+    .single {
+      flex-direction: column;
+    }
+  }
+  
